--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     <meta name="generator" content="Jekyll v3.8.5">
     <title>EasyDataTools - well map</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">
+    <!--<link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">-->
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
